@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-05-14T08:16:51Z",
-  "count_outdated" : 1647,
-  "uniques_outdated" : 903,
-  "count" : 1658,
+  "timestamp" : "2024-05-15T00:55:51Z",
+  "count_outdated" : 1648,
+  "uniques_outdated" : 904,
+  "count" : 1659,
   "uniques" : 912,
   "clones" : [
-    {
-      "timestamp": "2024-04-30T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-05-08T00:00:00Z",
       "count": 1,
@@ -61,9 +52,9 @@
     },
     {
       "timestamp": "2024-05-14T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
