@@ -1,12 +1,7 @@
 {
   "count": 11,
-  "uniques": 5,
+  "uniques": 4,
   "clones": [
-    {
-      "timestamp": "2024-04-30T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-05-08T00:00:00Z",
       "count": 1,
@@ -34,7 +29,7 @@
     },
     {
       "timestamp": "2024-05-14T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
